Codacity audit fix.
